Setting up Actions to build executables